--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0062)http://blackrockdigital.github.io/startbootstrap-landing-page/ -->
+<!-- save from url=(0062)http://blackrockdigital.github.io/startbootstrap-landing-page/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     
