--- a/students.html
+++ b/students.html
@@ -31,8 +31,6 @@
 </head>
 
 <body>
-
-    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -93,9 +91,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="staffs.html">PROGRAM STAFF</a></li>
-                          <li><a href="staffs.html">BOARD OF DIRECTORS</a></li>                                             
+                        <ul class="dropdown-menu">                          
+                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
+                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
                         </ul>
                     </li>
                     <li>
@@ -103,14 +101,14 @@
                     </li>
                     <li>
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">DONATE</a>
-                    </li>
-                    
+                    </li>                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
+    
     <section class="strip bg-primary" style="background-color: #9dbdd8;margin-top: 100px;">
         <div class="container">
             <div class="row clearfix">
