--- a/about.html
+++ b/about.html
@@ -31,9 +31,7 @@
 </head>
 
 <body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -93,9 +91,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="staffs.html">PROGRAM STAFF</a></li>
-                          <li><a href="staffs.html">BOARD OF DIRECTORS</a></li>                                             
+                        <ul class="dropdown-menu">                          
+                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
+                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
                         </ul>
                     </li>
                     <li>
@@ -103,8 +101,7 @@
                     </li>
                     <li>
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">DONATE</a>
-                    </li>
-                    
+                    </li>                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
