--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     </li>
                     <li class="dropdown">
                         <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="staffs.html">PROGRAM STAFF</a></li>
-                          <li><a href="staffs.html">BOARD OF DIRECTORS</a></li>                                             
+                        <ul class="dropdown-menu">                          
+                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
+                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
                         </ul>
                     </li>
                     <li>
