--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect With Biotech Partner</h2>
+                    <h2>Connect With
+                    <br>
+                    Biotech Partner</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
