--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Thank to Our Sponsors.
+                <p class="lead">
+                    Some of the generous companies we have the pleasure to work with
+                </p>
                 </h2>                
                 <a href="http://pharma.bayer.com/">
                 <img class="background-image" alt="Background Image" src="img/sponsors/BayerHealthCare.jpg" style="zoom:10%;">
