fix homepage sponsor

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="row">                
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Thank to Our Sponsors.
+                <h2 class="section-heading">Thank to Our Sponsors
                 <p class="lead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
