--- a/staffs.html
+++ b/staffs.html
@@ -436,8 +436,11 @@
             <div class="row">                
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Thank to Our Sponsors.
-                </h2>                
+                <h2 class="section-heading">Thank to Our Sponsors                
+                <p class="lead">
+                    Some of the generous companies we have the pleasure to work with
+                </p>
+                </h2>
                 <a href="http://pharma.bayer.com/">
                 <img class="background-image" alt="Background Image" src="img/sponsors/BayerHealthCare.jpg" style="zoom:10%;">
                 </a>
