--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         Donate To BiotechPartner</a>
                     <a href="" class="btn btn-primary">
                         Learn More about Us</a>
-                    <p class="lead">
+                    <p class="lead sectionLead">
                         Biotech Partners also accepts securities as a donation. For more information on how you can donate a security, please contact Erina Atkins-Hadad, <a href="mailto:erina@mosscpa.com">erina@mosscpa.com.</a>
                     </p>
                     
@@ -281,7 +281,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Thank to Our Sponsors
-                <p class="lead">
+                <p class="lead sectionLead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
                 </h2>                
