--- a/staffs.html
+++ b/staffs.html
@@ -437,7 +437,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Thank to Our Sponsors                
-                <p class="lead">
+                <p class="lead sectionLead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
                 </h2>
