--- a/about.html
+++ b/about.html
@@ -112,8 +112,10 @@
         <div class="container">
             <div class="row clearfix">
                 <div class="col-md-8">                                       
-                    <h1 style="color: #333333;">                        
+                    <h1 style="color: #4a4545;">                        
                         About Us
+                        <br>
+                        <br>
                         <p class="lead sectionLead">
                             Learn why we're the best at what we do.
                         </p>                        
