--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Biotech Partner</title>
+    <title>Biotech Partners</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.css" rel="stylesheet">
@@ -116,10 +116,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Welcome To Biotech Partner</h1>
+                        <h1>Welcome To Biotech Partners</h1>
                         <h3>We Help High School Students for Internship in Biotech Companies.</h3>                        
                         <p class="lead">                            
-                            Biotech Partner is currently at Berkeley & Oakland Tech High, & Peralta Colleges.
+                            Biotech Partners is currently at Berkeley & Oakland Tech High, & Peralta Colleges.
                         </p>
                         <hr class="intro-divider">
                     </div>
@@ -172,7 +172,7 @@
                     </p>
                     <br>
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary">
-                        Donate To BiotechPartner</a>
+                        Donate To BiotechPartners</a>
                     <a href="" class="btn btn-primary">
                         Learn More about Us</a>
                     <p class="lead sectionLead">
@@ -216,8 +216,11 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Catching Up with Us by Following Our Twitter.
-                    <br> @BiotechPartner
+                    <h2 class="section-heading">Catching Up with Us by Following Our Twitter
+                    <br>
+                    <a href="https://twitter.com/BiotechPartner">
+                        @BiotechPartner
+                    </a>                    
                     </h2>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
