--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                     <li class="dropdown">
                         <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="about.html">MISSION</a></li>
-                          <li><a href="about.html">ABOUT US</a></li>
-                          <li><a href="about.html">CORE VALUE</a></li>
-                          <li><a href="about.html">MORE ABOUT US</a></li>                  
+                          <li><a href="about.html#MissionAnchor">MISSION</a></li>
+                          <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
+                          <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
+                          <li><a href="moreaboutus.html">MORE ABOUT US</a></li>                  
                         </ul>
                     </li>
                     <li class="dropdown">
