--- a/moreaboutus.html
+++ b/moreaboutus.html
@@ -111,19 +111,20 @@
     <section class="strip bg-primary" style="background-color: #9dbdd8;margin-top: 100px;">
         <div class="container">
             <div class="row clearfix">
-                <div class="col-md-8">
-                    <h3 class="text-white pull-left" style="color: #333333;">
-                        <strong>Students Page
-                        </strong>                            
-                    </h3>                    
-                    <h1 style="color: #333333;">
+                <div class="col-md-8">                                       
+                    <h1 style="color: #4a4545;">                        
+                        About Us More
                         <br>
-                        Students In Biotech Partner
+                        <br>
+                        <p class="lead sectionLead">
+                            Learn why we're the best at what we do.
+                        </p>                        
                     </h1>
                 </div>                    
             </div>
         </div>
-    </section>        
+    </section>
+    
     <!-- Footer -->
     <footer>
         <div class="container">
