--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
             </div>
         </div>
     </div>
-    <div class="content-section-a">
+    <div class="content-section-b">
         <div class="container">
             <div class="row">                
                 <hr class="section-heading-spacer">
