--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                           <li><a href="about.html#MissionAnchor">MISSION</a></li>
                           <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
                           <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
-                          <li><a href="moreaboutus.html">MORE ABOUT US</a></li>                  
+                          <li><a href="about.html#MoreAboutUsAnchor">MORE ABOUT US</a></li>                  
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -239,7 +239,8 @@
                 <h4>Passion</h4>
                 <br>                
                     We enthusiastically approach our vital work and encourage and motivate our youth.
-                    <br>                    
+                    <br>
+                    <br>
                 </a>
                 </a>
                 <a class="list-group-item list-group-item-warning">
@@ -254,6 +255,48 @@
             </div>
         </div>
     </div>
+    <div class="content-section-a" id="MoreAboutUsAnchor">
+        <div class="container">
+            <div class="row">                
+                <h1 class='text-center'>Biotech Partners RFP & Strategies</h1>
+                <div class='col-md-6'>
+                    <h4>
+                        RFP: Establishing Biotechnology Industry-School District Partnerships
+                    </h4>
+                    <p class="lead sectionLeadAbout">
+                     Biotech Partners aims to increase STEM interest through a classroom-based program.
+                     <br>
+                     <a href="http://www.biotechpartners.org/pdf/RFPExtended.pdf">Learn More Here</a>
+                     </p>
+                </div>
+                <div class='col-md-6'>
+                    <h4>
+                        Strategic Plan
+                    </h4>
+                    <p class="lead sectionLeadAbout">
+                     Biotech Partners is aligned and committed to implementing the following Strategies and supporting Goals in 2013-2016.                     
+                     </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="row">
+    <section class="strip bg-primary" style="background-color: #9dbdd8;">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
+                    <h3 class="text-white pull-left" style="color: #333333;"><strong>We Need Your Help. Volunteer To Biotech Partners</strong></h3>
+                </div>
+                <div class="col-sm-3 col-xs-12 pull-right text-right">                    
+                    <a href="contactus.html" class="btn btn-primary" style="margin-top: 9px;">
+                        Volunteer</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    </div>
+    
     <div class="content-section-b">
         <div class="container">
             <div class="row">                
