--- a/students.html
+++ b/students.html
@@ -62,7 +62,7 @@
                           <li><a href="about.html#MissionAnchor">MISSION</a></li>
                           <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
                           <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
-                          <li><a href="moreaboutus.html">MORE ABOUT US</a></li>                  
+                          <li><a href="about.html#MoreAboutUsAnchor">MORE ABOUT US</a></li>                  
                         </ul>
                     </li>
                     <li class="dropdown">
