--- a/about.html
+++ b/about.html
@@ -274,8 +274,10 @@
                         Strategic Plan
                     </h4>
                     <p class="lead sectionLeadAbout">
-                     Biotech Partners is aligned and committed to implementing the following Strategies and supporting Goals in 2013-2016.                     
-                     </p>
+                     Biotech Partners is aligned and committed to implementing the following Strategies and supporting Goals in 2013-2016.
+                     <br>
+                     <a href="http://www.biotechpartners.org/pdf/BiotechPartners2013-2016StrategicPlan.pdf">Learn More Here</a>
+                     </p>                    
                 </div>
             </div>
         </div>
