--- a/about.html
+++ b/about.html
@@ -370,7 +370,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="contactus.html">Contact</a>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
