--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Biotech Partner</title>
+    <title>Biotech Partners - About Us</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.css" rel="stylesheet">
@@ -379,7 +379,7 @@
                     </ul>
                     <p class="copyright text-muted small"> 800 Dwight Way, B52-2, Berkeley, CA 94710. Mailing: P.O. Box 2186, Berkeley </p>
                     <p class="copyright text-muted small"> Contact us by Phone: 510-705-4830 or Email BPInfo@biotechpartners.org </p>
-                    <p class="copyright text-muted small">Copyright © Biotech Partner 2016. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright © Biotech Partners 2016. All Rights Reserved</p>
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-2">
