--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Bravo 2016!</h2>
                     <p class="lead">
-                        Biotech Partner Event is coming up. <br>
+                        Biotech Partners Event is coming up. <br>
                         Bravo 2016!
                         <br>
                         <br>
@@ -326,7 +326,7 @@
                 <div class="col-lg-6">
                     <h2>Connect With
                     <br>
-                    Biotech Partner</h2>
+                    Biotech Partners</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
