--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <a href="sponsors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPONSORS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="sponsors.html">Becoming A Sponsor</a></li>
-                          <li><a href="sponsors.html">Impact</a></li>
-                          <li><a href="sponsors.html">Current Sponsors</a></li>                                   
+                          <li><a href="sponsors.html#ImpactAnchor">Impact</a></li>
+                          <li><a href="sponsors.html#CurrentSponsorAnchor">Current Sponsors</a></li>                                   
                         </ul>
                     </li>
                     <li class="dropdown">
