--- a/newsletter.html
+++ b/newsletter.html
@@ -30,7 +30,7 @@
     <script src="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.js"></script>
 </head>
 
-<body><!-- Navigation -->
+<body>
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -78,8 +78,8 @@
                         <a href="sponsors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPONSORS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                           <li><a href="sponsors.html">Becoming A Sponsor</a></li>
-                          <li><a href="sponsors.html">Impact</a></li>
-                          <li><a href="sponsors.html">Current Sponsors</a></li>                                   
+                          <li><a href="sponsors.html#ImpactAnchor">Impact</a></li>
+                          <li><a href="sponsors.html#CurrentSponsorAnchor">Current Sponsors</a></li>                                   
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -107,9 +107,8 @@
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
-    </nav>   
-    
-     <div class="content-section-b marginForPages">
+    </nav>
+    <div class="content-section-b marginForPages">
         <div class="container">
             <div class="row" style="text-align:center;">
                 <h1>Our Latest Newsletter: Fall 2015</h1>
