--- a/about.html
+++ b/about.html
@@ -236,9 +236,8 @@
                 <a class="list-group-item list-group-item-info">
                 <h4>Passion</h4>
                 <br>                
-                    We enthusiastically approach our vital work and encourage and motivate our youth.
-                    <br>
-                    <br>
+                    We enthusiastically approach our vital work and encourage and motivate our
+                    <br> youth.
                 </a>
                 </a>
                 <a class="list-group-item list-group-item-warning">
