--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <br>
                         BRAVO! is an exhibition of knowledge and a celebration of youth development.
                         <br>
-                        <a target="_blank" href="http://www.google.com/fonts">Learn More.</a>
+                        <a target="_blank" href="events.html">Learn More.</a>
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
