--- a/newsletter.html
+++ b/newsletter.html
@@ -112,8 +112,8 @@
         <div class="container">
             <div class="row" style="text-align:center;">
                 <h1>Our Latest Newsletter: Fall 2015</h1>
-                <iframe src="http://docs.google.com/gview?url=http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf&embedded=true" style="width:95%; height:2100px;" frameborder="0">                    
-                </iframe>
+                
+                <embed src="http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf" width="95%" height="2100px">
                 <h4>Download It Here:
                 <a href="http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf">
                     Fall 2015.pdf
