--- a/newsletter.html
+++ b/newsletter.html
@@ -113,7 +113,7 @@
             <div class="row" style="text-align:center;">
                 <h1>Our Latest Newsletter: Fall 2015</h1>
                 
-                <embed src="http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf" width="95%" height="2100px">
+                <embed src="pdf/BP_Fall2015_Newsletter.pdf" width="95%" height="2100px">
                 <h4>Download It Here:
                 <a href="http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf">
                     Fall 2015.pdf
