--- a/newsletter.html
+++ b/newsletter.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <script src="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+    <script src="script/custom.js"></script>
 </head>
 
 <body>
@@ -113,8 +115,7 @@
             <div class="row" style="text-align:center;">
                 <h1>Our Latest Newsletter: Fall 2015</h1>
                 <iframe src="pdf/BP_Fall2015_Newsletter.pdf" style="width:90%; height:2100px;" frameborder="0">                    
-                </iframe>
-                
+                </iframe>                
                 <h4>Download It Here:
                 <a href="http://www.biotechpartners.org/pdf/BP_Fall2015_Newsletter.pdf">
                     Fall 2015.pdf
