--- a/students.html
+++ b/students.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <script src="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.3.1/scrollreveal.min.js"></script>
+    <script src="script/custom.js"></script>
 </head>
 
 <body>
