--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div clas="well">
                         <h2>What is Biotech Partners?</h2>
                         <p class="lead">
-                            We are a non profit organization, work closing with students, provides training courses and find a internship in a Biotech industry.
+                            We are a non profit organization, works closely with students, provides training courses and find a internship in a Biotech industry.
                             <br>
                             We hope to make a big impact.
                         </p>
