--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Welcome To Biotech Partners</h1>
-                        <h3>We Help High School Students for Internship in Biotech Companies.</h3>                        
+                        <h3>We Help High School and College Students for Internship in Biotech Industry.</h3>                        
                         <p class="lead">                            
-                            Biotech Partners is currently at Berkeley & Oakland Tech High, & Peralta Colleges.
+                            Biotech Partners is currently at Berkeley, Oakland Tech High, and Peralta Colleges.
                         </p>
                         <hr class="intro-divider">
                     </div>
