--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <br>
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary">
                         Donate To BiotechPartners</a>
-                    <a href="" class="btn btn-primary">
+                    <a href="about.html" class="btn btn-primary">
                         Learn More about Us</a>
                     <p class="lead sectionLead">
                         Biotech Partners also accepts securities as a donation. For more information on how you can donate a security, please contact Erina Atkins-Hadad, <a href="mailto:erina@mosscpa.com">erina@mosscpa.com.</a>
