--- a/about.html
+++ b/about.html
@@ -88,12 +88,12 @@
                     <li class="dropdown">
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcomings</a></li>
+                          <li><a href="events.html">Upcoming</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
+                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
                         <ul class="dropdown-menu">                          
                           <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
                           <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
@@ -282,28 +282,12 @@
         </div>
     </div>
     
-    <div class="row">
-    <section class="strip bg-primary" style="background-color: #9dbdd8;">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                    <h3 class="text-white pull-left" style="color: #333333;"><strong>We Need Your Help. Volunteer To Biotech Partners</strong></h3>
-                </div>
-                <div class="col-sm-3 col-xs-12 pull-right text-right">                    
-                    <a href="contactus.html" class="btn btn-primary" style="margin-top: 9px;">
-                        Volunteer</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    </div>
-    
     <div class="content-section-b">
         <div class="container">
             <div class="row">                
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Thank to Our Sponsors
+                <h2 class="section-heading">Thanks to Our Sponsors
                 <p class="lead sectionLead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
@@ -365,7 +349,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="staffs.html">Staffs</a>
+                            <a href="staffs.html">Staff</a>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
