--- a/newsletter.html
+++ b/newsletter.html
@@ -87,12 +87,12 @@
                     <li class="dropdown">
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcomings</a></li>
+                          <li><a href="events.html">Upcoming</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
+                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
                         <ul class="dropdown-menu">                          
                           <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
                           <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
@@ -164,7 +164,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="staffs.html">Staffs</a>
+                            <a href="staffs.html">Staff</a>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
