--- a/sponsors.html
+++ b/sponsors.html
@@ -87,12 +87,12 @@
                     <li class="dropdown">
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcomings</a></li>
+                          <li><a href="events.html">Upcoming</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
+                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
                         <ul class="dropdown-menu">                          
                           <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
                           <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
@@ -123,7 +123,7 @@
                         Becoming a Sponsor
                         <br>
                         <br>
-                        <p class="lead sectionLead">
+                        <p class="lead">
                             Bay Area biomedical/biotechnology companies and institutions realize significant benefits by partnering with Biotech Partners.
                             <br>
                             Biotech Partners' programs develop and entry-level biotechnology workforce that is essential to this rapidly growing industry.
@@ -389,7 +389,7 @@
             <div class="row">                
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Thank to Our Sponsors                
+                <h2 class="section-heading">Thanks to Our Sponsors                
                 <p class="lead sectionLead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
@@ -452,7 +452,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="staffs.html">Staffs</a>
+                            <a href="staffs.html">Staff</a>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
