--- a/staffs.html
+++ b/staffs.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Biotech Partners - Staffs</title>
+    <title>Biotech Partners - Staff</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./Landing Page - Start Bootstrap Theme_files/bootstrap.min.css" rel="stylesheet">
@@ -87,12 +87,12 @@
                     <li class="dropdown">
                         <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcomings</a></li>
+                          <li><a href="events.html">Upcoming</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFFS <span class="caret"></span></a>
+                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
                         <ul class="dropdown-menu">                          
                           <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
                           <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
@@ -438,7 +438,7 @@
             <div class="row">                
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <h2 class="section-heading">Thank to Our Sponsors                
+                <h2 class="section-heading">Thanks to Our Sponsors                
                 <p class="lead sectionLead">
                     Some of the generous companies we have the pleasure to work with
                 </p>
@@ -500,7 +500,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="staffs.html">Staffs</a>
+                            <a href="staffs.html">Staff</a>
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
