--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <br>
                             <br>
                             <h4>
-                                Biotech Partners facilitates access to scientific careers through a Biotech-focused Curriculum,
+                                Biotech Partners Facilitates Access to Scientific Careers Through a Biotech-focused Curriculum,
                                 Hands-on Training & Paid Internships.
                             </h4>
                             <br>
