--- a/sponsors.html
+++ b/sponsors.html
@@ -384,7 +384,7 @@
         </div>
     </div>
     
-    <div class="content-section-a">
+    <div class="content-section-b">
         <div class="container">
             <div class="row">                
                 <hr class="section-heading-spacer">
