--- a/newsletter.html
+++ b/newsletter.html
@@ -113,7 +113,14 @@
     <div class="content-section-b marginForPages">
         <div class="container">
             <div class="row" style="text-align:center;">
-                <h1>Our Latest Newsletter: Fall 2015</h1>
+                <h1>
+                    Biotech Partners Connection Newsletter
+                    <br>
+                    Our Latest Newsletter: Fall 2015
+                </h1>
+                <h4>
+                    Connecting Youth with the World of Biotechnology.
+                </h4>
                 <iframe src="pdf/BP_Fall2015_Newsletter.pdf" style="width:90%; height:2100px;" frameborder="0">                    
                 </iframe>                
                 <h4>Download It Here:
