--- a/sponsors.html
+++ b/sponsors.html
@@ -115,7 +115,7 @@
             <div class="row clearfix">
                 <div class="col-md-12">
                     <h3 class="text-white pull-left" style="color: #4a4545;">
-                        <strong>Interest In
+                        <strong>Interested In
                         </strong>                            
                     </h3>
                     <h1 style="color: #4a4545;">
@@ -126,7 +126,7 @@
                         <p class="lead">
                             Bay Area biomedical/biotechnology companies and institutions realize significant benefits by partnering with Biotech Partners.
                             <br>
-                            Biotech Partners' programs develop and entry-level biotechnology workforce that is essential to this rapidly growing industry.
+                            Biotech Partners' programs develop an entry-level biotechnology workforce that is essential to this rapidly growing industry.
                         </p>
                     </h1>
                 </div>                    
@@ -163,24 +163,8 @@
                      Mentors who volunteer with Biotech Partners contribute their time and provide assistance in curriculum development and technical support for the program.
                      This includes working with Biotech Partners' staff to develop a workplan for each student, and receiving guidance and support from Biotech Partners' staff.
                      Mentors often discover that helping a young person get a start in the working world is rewarding both personally and professionally-particularly if the Biotech Partners' graduate is later hired at the mentor's organization.</p>                  
-                    </h2>
-                    
-                </div>
-                <div class="col-md-6">
-                    <h2 class="section-heading">
-                     Mentor Spotlight              
-                     <br>
-                     <hr class="section-heading-spacer">
-                     <br>
-                     <br>
-                     <p class="lead sectionLeadAbout">
-                     Glenn Yamasaki, one of Biotech Partners' Bayer HealthCare mentors, is deeply committed to helping young people reach their potential.
-                     At the February 2009 Biotech Partners' 15th Anniversary Gala, Glen received the Biotech Partners' Outstanding Mentor Award for his dedication to youth and more than a decade of service as a mentor for Biotech Partners' high school summer interns and community college students.
-                     "I know my co-workers and I make a difference in the lives of the students. The range of what the students have to learn is vast, but it´s amazing how adaptable and energetic they can be.
-                     Interns have been involved in drug discovery research, including assay development and quality control.".
-                     </p>                     
-                    </h2>
-                </div>                
+                    </h2>                    
+                </div>                               
             </div>
         </div>
     </div>
