--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
                     <li class="dropdown">
                         <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="about.html#MissionAnchor">MISSION</a></li>
+                          <li><a href="about.html">MISSION</a></li>
                           <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
-                          <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
-                          <li><a href="about.html#MoreAboutUsAnchor">MORE ABOUT US</a></li>                  
+                          <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>                                           
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -119,10 +118,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Welcome to Biotech Partners</h1>
-                        <h3>Building Careers. Transforming Lives.</h3>                        
-                        <p class="lead">                            
-                            Biotech Partners is currently at Berkeley High, Oakland Tech High, and Peralta Colleges.
-                        </p>
+                        <h3>Building Careers. Transforming Lives.</h3>
                         <hr class="intro-divider">
                     </div>
                 </div>
@@ -263,7 +259,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Bravo 2016!</h2>
+                    <h2 class="section-heading">Bravo! 2016</h2>
                     <p class="lead">                        
                         BRAVO! 2016 is Underway!
                         <br>
