--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         <ul class="dropdown-menu">
                           <li><a href="about.html">MISSION</a></li>
                           <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
-                          <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>                                           
+                          <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
+                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
+                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -79,25 +81,21 @@
                     <li class="dropdown">
                         <a href="sponsors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPONSORS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                          <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">Donate</a></li>
                           <li><a href="sponsors.html">Becoming A Sponsor</a></li>
                           <li><a href="sponsors.html#ImpactAnchor">Impact</a></li>
                           <li><a href="sponsors.html#CurrentSponsorAnchor">Current Sponsors</a></li>                                   
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
+                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News & Events <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcoming</a></li>
+                          <li><a href="followus.html">Follow Us</a></li>
+                          <li><a href="blog.html">Blog</a></li>
+                          <li><a href="events.html">Upcoming Events</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
-                        <ul class="dropdown-menu">                          
-                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
-                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
-                        </ul>
-                    </li>
+                    </li>                    
                     <li>
                         <a href="contactus.html">CONTACT US</a>
                     </li>
@@ -238,19 +236,19 @@
     </div>
     <!-- /.content-section-b -->    
     <div class="row">
-    <section class="strip bg-primary" style="background-color: #9dbdd8;">
-        <div class="container">
-            <div class="row clearfix">
-                <div class="col-sm-9 col-xs-12 pull-left clear-fix">
-                    <h3 class="text-white pull-left" style="color: #333333;"><strong>Support Biotech Partners. &nbsp;</strong></h3>
-                </div>
-                <div class="col-sm-3 col-xs-12 pull-right text-right">                    
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary" style="margin-top: 9px;">
-                        Donate</a>
+        <section class="strip bg-primary" style="background-color: #9dbdd8;">
+            <div class="container">
+                <div class="row clearfix">
+                    <div class="col-sm-9 col-xs-12 pull-left clear-fix">
+                        <h3 class="text-white pull-left" style="color: #333333;"><strong>Support Biotech Partners. &nbsp;</strong></h3>
+                    </div>
+                    <div class="col-sm-3 col-xs-12 pull-right text-right">                    
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" class="btn btn-primary" style="margin-top: 9px;">
+                            Donate</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
     
     <div class="content-section-a">
