--- a/events.html
+++ b/events.html
@@ -61,10 +61,11 @@
                     <li class="dropdown">
                         <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ABOUT <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="about.html#MissionAnchor">MISSION</a></li>
+                          <li><a href="about.html">MISSION</a></li>
                           <li><a href="about.html#AboutUsAnchor">ABOUT US</a></li>
                           <li><a href="about.html#CoreValueAnchor">CORE VALUE</a></li>
-                          <li><a href="about.html#MoreAboutUsAnchor">MORE ABOUT US</a></li>                  
+                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
+                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -79,25 +80,21 @@
                     <li class="dropdown">
                         <a href="sponsors.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SPONSORS <span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                          <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">Donate</a></li>
                           <li><a href="sponsors.html">Becoming A Sponsor</a></li>
                           <li><a href="sponsors.html#ImpactAnchor">Impact</a></li>
                           <li><a href="sponsors.html#CurrentSponsorAnchor">Current Sponsors</a></li>                                   
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">EVENTS <span class="caret"></span></a>
+                        <a href="events.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">News & Events <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="events.html">Upcoming</a></li>
+                          <li><a href="followus.html">Follow Us</a></li>
+                          <li><a href="blog.html">Blog</a></li>
+                          <li><a href="events.html">Upcoming Events</a></li>
                           <li><a href="events.html">Past Events</a></li>                                             
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="staffs.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">STAFF <span class="caret"></span></a>
-                        <ul class="dropdown-menu">                          
-                          <li><a href="staffs.html#BoardandDirector">BOARD OF DIRECTORS</a></li>
-                          <li><a href="staffs.html#ProgramStaff">PROGRAM STAFF</a></li>
-                        </ul>
-                    </li>
+                    </li>                    
                     <li>
                         <a href="contactus.html">CONTACT US</a>
                     </li>
