--- a/followus.html
+++ b/followus.html
@@ -112,12 +112,12 @@
             <div class="row clearfix">
                 <div class="col-md-8">
                     <h3 class="text-white pull-left" style="color: #333333;">
-                        <strong>Contact Us Page
+                        <strong>Follow Us Page
                         </strong>                            
                     </h3>                    
                     <h1 style="color: #333333;">
                         <br>
-                        Contact Biotech Partner
+                        Follow Biotech Partner
                     </h1>
                 </div>                    
             </div>
