--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a href="contactus.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN">DONATE</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=XS9K3PGNJU6FN" style="background-color: #337ab7; color: #f8f8f8;">DONATE</a>
                     </li>                    
                 </ul>
             </div>
